web/book/tests/snapshots/snapshot__tests__prql__transforms__sort-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nsort [s\"substr({first_name}, 2, 5)\"]\n"
---
SELECT
  *,
  substr(first_name, 2, 5) AS _expr_0
FROM
  employees
ORDER BY
  _expr_0

