web/book/tests/snapshots/snapshot__tests__prql__transforms__window-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nsort age\nderive rnk = rank\n"
---
SELECT
  *,
  RANK() OVER (
    ORDER BY
      age ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING
  ) AS rnk
FROM
  employees
ORDER BY
  age

