web/book/tests/snapshots/snapshot__tests__prql__transforms__window-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\ngroup department (\n  sort age\n  derive rnk = rank\n)\n"
---
SELECT
  *,
  RANK() OVER (
    PARTITION BY department
    ORDER BY
      age ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING
  ) AS rnk
FROM
  employees

